@@ -1,3 +1,8 @@
+2004-07-16  Andrew Cagney  <cagney@gnu.org>
+
+	* gdb.texinfo (Mode Options): Delete documentation on "-async" and
+	"-noasync".
+
 2004-07-09  Eli Zaretskii  <eliz@gnu.org>
 
 	* gdb.texinfo: Fix @kindex entries so that multiple commands that
